# MusicVisualize

./: CMakeLists.txt  Framework.cpp  README.md  freq.cpp  freq.h  imgui.ini  main.cpp  music_view.cpp  music_view.h  player.cpp  player.h  test.cpp
